# pico-irm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.h
lib/: display.cpp  display.h  measurement.cpp  measurement.h
